Still trying to wrap my head around some weird formating issues and about halfway through

--- a/week3/excercise3/excercise3.css
+++ b/week3/excercise3/excercise3.css
@@ -4,13 +4,18 @@ html {
   -webkit-text-size-adjust: 100%;
   height: 100%;
 }
+h1, h2, h3, h4, h5, h6 {
+  text-align: left;
+}
 
 body {
   margin: 0;
   min-height: 100%;
 }
-section, header, footer{
-    margin: 5%;
+section,
+header,
+footer {
+  margin: 5%;
 }
 article,
 aside,
@@ -48,18 +53,26 @@ input,
 optgroup,
 select,
 textarea {
- color:inherit;
- font:inherit;
- margin:0
+  color: inherit;
+  font: inherit;
+  margin: 0;
 }
 
 #about-me p {
-    margin: 5px;
-    padding: 5px;
-    background-color: rgba(77, 85, 84, 0.198);
+  height: 15%;
+
+  margin: 5px;
+  padding: 5px;
+  background-color: rgba(77, 85, 84, 0.198);
 }
-#column-halfparent{
-    float: left;
-    width: 50%;
+.column-halfparent {
+  float: left;
+  width: 50%;
 }
 
+.clear {
+  clear: both;
+}
+hr {
+  display: block;
+}
